# diss

./: .gitignore  Cargo.toml  README.md  acmart.typ  analysis.ipynb  build.rs  generate_cnf.py  main.bib  main.typ  qubo_sat_cli  test-longer.cnf  test.txt
crates/common/: Cargo.toml
crates/common/src/: data_recorder.rs  lib.rs
crates/qubo_problem/: Cargo.toml
crates/qubo_problem/src/: lib.rs  qubo.rs  record.rs  solver.rs  test.rs
crates/qubo_sat_cli/: Cargo.toml
crates/qubo_sat_cli/src/: main.rs
crates/qubo_solvers/: Cargo.toml  build.rs
crates/qubo_solvers/kernels/: momentum.cpp  mopso.cpp  mopso.cu  pes.cu
crates/qubo_solvers/kernels/include/: qubo_solvers.h
crates/qubo_solvers/src/: es.rs  lib.rs  momentum.rs  mopso.rs  pes.rs  sa.rs
crates/qubo_solvers_cpu/: Cargo.toml
crates/qubo_solvers_cpu/src/: es.rs  lib.rs  sa.rs  solver.h
crates/qubo_solvers_gpu/: Cargo.toml
crates/qubo_solvers_gpu/src/: lib.rs  mopso.backend.cu  mopso.rs  pes.backend.cu
crates/sat_problem/: Cargo.toml
crates/sat_problem/src/: lib.rs  sat.rs
crates/sat_to_qubo_reducers/: Cargo.toml
crates/sat_to_qubo_reducers/src/: choi.rs  lib.rs  nusslein.rs  nusslein23.rs  nusslein23_2.rs
crates/sat_to_qubo_reducers_cpu/: Cargo.toml
crates/sat_to_qubo_reducers_cpu/src/: chancellor.rs  choi.rs
libsycl_solvers/: CMakeLists.txt  momentum.cpp  mopso.cpp
qubo_sat_cli/: Cargo.toml
qubo_sat_cli/src/: main.rs
src/: core.rs  error.rs  lib.rs  logging.rs  main.rs  matrix.rs  problem.rs  qubo.rs  reducers.rs  sat.rs  utils.rs
src/problem/: qubo.rs  reductions.rs  sat.rs
src/problem/qubo/: helpers.rs  solver.rs  test.rs
src/problem/qubo/solver/: es.rs  mopso.rs  pes.backend.cpp  pes.backend.cu  pes.rs  sa.rs
src/problem/reductions/: ksat_to_qubo.rs  ksat_to_threesat.rs  sat.rs  sat_to_qubo.rs
src/problem/sat/: ksat.rs  reducer.rs  threesat.rs
src/problem/sat/reducer/: chancellor.rs  choi.rs  ksat_to_threesat.rs  nusslein.rs  nusslein23.rs
src/qubo/: mod.rs
src/qubo/problem/: helpers.rs  mod.rs  test.rs
src/qubo/solvers/: es.rs  mod.rs  momentum.rs  mopso.rs  pes.rs  sa.rs
src/sat/: mod.rs  problem.rs
src/sat/reductions/: mod.rs
src/sat/reductions/qubo/: chancellor.rs  choi.rs  mod.rs  nusslein.rs  nusslein23.rs  nusslein23_2.rs
