[package]
name = "diss"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
log = "0.4.20"
nalgebra = { version = "0.32.4", features = ["rand"] }
nalgebra-sparse = "0.9.0"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
simple_logger = "4.3.0"
thiserror = "1.0.57"
