cargo-features = ["edition2024"]

[package]
name = "optimize-rs"
version = "0.1.0-alpha"
authors = ["Daudi Wampamba <me@daudi.dev>"]

description = "General-purpose solver library"
readme = "README.md"
categories = ["science", "mathematics", "algorithms"]
keywords = ["optimisation", "QUBO", "SAT"]
license = "LGPL-2"
edition = "2024"

[badges]
maintenance = { status = "experimental" }

[lib]
name = "optimizers"

[features]
sat = []
qubo = []
sycl = []

[dependencies]
thiserror = "1.0.59"
regex = "1.10.4"
nalgebra = { version = "0.32.5", features = ["rand-no-std", "rayon"] }
nalgebra-sparse = "0.9.0"
rand = { version = "0.8.5" }
rand_distr = "0.4.3"
log = "0.4.21"
rayon = "1.10.0"

[build-dependencies]
cmake = "0.1.50"

[workspace]
members = [
    "qubo_sat_cli"
]
resolver = "2"
default-members = ["qubo_sat_cli"]
