[package]
name = "qubo_problem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.4", features = ["rand", "rayon"] }
nalgebra-sparse = "0.9.0"
thiserror = "1.0.58"
common = { path = "../common"}

[dev-dependencies]
rand = "0.8.5"
