[package]
name = "qubo_sat_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
simple_logger = "4.3.3"
sat_problem = {path = "../sat_problem"}
qubo_problem = {path = "../qubo_problem"}
sat_to_qubo_reducers_cpu = { path = "../sat_to_qubo_reducers_cpu" }
qubo_solvers_cpu = { path = "../qubo_solvers_cpu" }
qubo_solvers_gpu = { path = "../qubo_solvers_gpu" }
common = {path = "../common"}