[package]
name = "sat_problem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
common = {path = "../common"}
regex = "1.10.4"
log = "0.4.21"
nalgebra = { version = "0.32.5", features = ["rand", "rayon"] }
nalgebra-sparse = "0.9.0"
