[package]
name = "sat_to_qubo_reducers_cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qubo_problem = {path = "../qubo_problem"}
sat_problem = {path = "../sat_problem"}
common = {path = "../common"}
nalgebra = { version = "0.32.5", features = ["rand", "rayon"] }
nalgebra-sparse = "0.9.0"
log = "0.4.21"
